dataset1235/2025-2/2947369575/users/3825365377/executions/1003782500_4233865845.log
== SUBMISSION (2025-09-01 22:24:17)
-- CODE: 
tempc= float(input("temperatura em celsius":))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 1
    tempc= float(input("temperatura em celsius":))
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 1
    tempc= float(input("temperatura em celsius":))
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 1
    tempc= float(input("temperatura em celsius":))
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 1
    tempc= float(input("temperatura em celsius":))
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 1
    tempc= float(input("temperatura em celsius":))
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 1
    tempc= float(input("temperatura em celsius":))
                                               ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:23:21)
-- CODE: 
tempc= float (input("temperatura em celsus":))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 1
    tempc= float (input("temperatura em celsus":))
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 1
    tempc= float (input("temperatura em celsus":))
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 1
    tempc= float (input("temperatura em celsus":))
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 1
    tempc= float (input("temperatura em celsus":))
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 1
    tempc= float (input("temperatura em celsus":))
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 1
    tempc= float (input("temperatura em celsus":))
                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:17:21)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
None
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
None
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
None
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
None
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
None
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:24:15)
-- CODE: 
tempc= float(input("temperatura em celsius":))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 1
    tempc= float(input("temperatura em celsius":))
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 1
    tempc= float(input("temperatura em celsius":))
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 1
    tempc= float(input("temperatura em celsius":))
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 1
    tempc= float(input("temperatura em celsius":))
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 1
    tempc= float(input("temperatura em celsius":))
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 1
    tempc= float(input("temperatura em celsius":))
                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:24:18)
-- CODE: 
tempc= float(input("temperatura em celsius":))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 1
    tempc= float(input("temperatura em celsius":))
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 1
    tempc= float(input("temperatura em celsius":))
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 1
    tempc= float(input("temperatura em celsius":))
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 1
    tempc= float(input("temperatura em celsius":))
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 1
    tempc= float(input("temperatura em celsius":))
                                               ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 1
    tempc= float(input("temperatura em celsius":))
                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:24:44)
-- CODE: 
tempc= float(input("temperatura em celsius:"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
temperatura em celsius:
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
temperatura em celsius:
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
temperatura em celsius:
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
temperatura em celsius:
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
temperatura em celsius:
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
temperatura em celsius:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:17:25)
-- CODE: 

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
None
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
None
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
None
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
None
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
None
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:29:15)
-- CODE: 
tempc= float(input("temperatura em celsius:"))
tempk= tempc*(9/5)+32
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
temperatura em celsius:
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
temperatura em celsius:
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
temperatura em celsius:
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
temperatura em celsius:
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
temperatura em celsius:
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
temperatura em celsius:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:24:39)
-- CODE: 
tempc= float(input("temperatura em celsius:"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
temperatura em celsius:
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
temperatura em celsius:
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
temperatura em celsius:
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
temperatura em celsius:
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
temperatura em celsius:
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
temperatura em celsius:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:31:53)
-- CODE: 
tempc= float(input("temperatura em celsius:"))
tempk= tempc*(9/5)+32
print(tempk)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
temperatura em celsius:-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
temperatura em celsius:14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
temperatura em celsius:212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
temperatura em celsius:68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
temperatura em celsius:32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
temperatura em celsius:86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:31:08)
-- CODE: 
tempc= float(input("temperatura em celsius:"))
tempk= tempc*(9/5)+32
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
temperatura em celsius:
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
temperatura em celsius:
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
temperatura em celsius:
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
temperatura em celsius:
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
temperatura em celsius:
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
temperatura em celsius:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:31:10)
-- CODE: 
tempc= float(input("temperatura em celsius:"))
tempk= tempc*(9/5)+32
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
temperatura em celsius:
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
temperatura em celsius:
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
temperatura em celsius:
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
temperatura em celsius:
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
temperatura em celsius:
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
temperatura em celsius:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:29:05)
-- CODE: 
tempc= float(input("temperatura em celsius:"))
tempk= tempc*(9/5)+32
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
temperatura em celsius:
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
temperatura em celsius:
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
temperatura em celsius:
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
temperatura em celsius:
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
temperatura em celsius:
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
temperatura em celsius:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:17:23)
-- CODE: 

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
None
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
None
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
None
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
None
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
None
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:32:59)
-- CODE: 
tempc= float(input("temperatura em celsius:"))
tempk= tempc*(9/5)+32
print(tempk)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
temperatura em celsius:-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
temperatura em celsius:14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
temperatura em celsius:212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
temperatura em celsius:68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
temperatura em celsius:32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
temperatura em celsius:86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:24:42)
-- CODE: 
tempc= float(input("temperatura em celsius:"))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
temperatura em celsius:
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
temperatura em celsius:
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
temperatura em celsius:
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
temperatura em celsius:
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
temperatura em celsius:
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
temperatura em celsius:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:29:11)
-- CODE: 
tempc= float(input("temperatura em celsius:"))
tempk= tempc*(9/5)+32
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
temperatura em celsius:
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
temperatura em celsius:
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
temperatura em celsius:
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
temperatura em celsius:
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
temperatura em celsius:
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
temperatura em celsius:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:17:23)
-- CODE: 

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
None
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
None
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
None
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
None
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
None
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:29:12)
-- CODE: 
tempc= float(input("temperatura em celsius:"))
tempk= tempc*(9/5)+32
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
temperatura em celsius:
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
temperatura em celsius:
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
temperatura em celsius:
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
temperatura em celsius:
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
temperatura em celsius:
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
temperatura em celsius:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
